# mecojoni

./: BENCHMARKS.md  BYTECODE_FORMAT.md  BYTECODE_FORMAT_PLAN.md  COMPATIBILITY.md  CONFORMANCE.md  Cargo.toml  MIGRATION_V1_TO_V2.md  README.md  RELEASE.md  ROADMAP.md  SPECIFICATION.md  SYNTAX.md  V2_INTERFACES.md  V2_SPECIFICATION.md  V2_SYNTAX.md  deno.json
.github/workflows/: ci.yml
benchmarks/artifacts/: README.md  harbor.mecob
benchmarks/artifacts/workloads/: chain-512.mecob  (+5 more)
benchmarks/results/: 2026-07-16-bytecode0-darwin-arm64.json  2026-07-16-bytecode1-workloads-darwin-arm64.json
crates/mecojoni-benchmarks/: Cargo.toml  README.md
crates/mecojoni-benchmarks/baselines/: operations-v1.contract
crates/mecojoni-benchmarks/src/: lib.rs  main.rs
crates/mecojoni-benchmarks/tests/: artifact_files.rs  operation_contract.rs  recorded_results.rs
crates/mecojoni-cli/: Cargo.toml  README.md
crates/mecojoni-cli/src/: format.rs  lib.rs  loader.rs  main.rs  v1.rs
crates/mecojoni-cli/tests/: cli_process.rs
crates/mecojoni-cli/tests/fixtures/messages/: messages.manifest  root.meco.md
crates/mecojoni-cli/tests/fixtures/v1/: dialogue.meco
crates/mecojoni-cli/tests/fixtures/v2/: common.meco.md  invalid.meco.md  root.meco.md
crates/mecojoni-core/: Cargo.toml  README.md
crates/mecojoni-wasm/: Cargo.toml  README.md  build.rs
crates/mecojoni-wasm/src/: lib.rs
docs/decisions/: 0001-defer-compiled-artifacts.md
editors/vscode/: README.md  language-configuration.json  package.json
examples/: hello.meco.md
examples/npc/: common.meco.md  root.meco.md
js/: README.md  browser_server.ts  browser_smoke.ts  browser_test.ts  embedded_browser_smoke.html  embedded_browser_smoke.ts  embedded_test.ts  mecojoni.ts  mecojoni_test.ts  workloads.ts  workloads_bench.ts  workloads_test.ts
js/fixtures/: README.md  hello.mecob
mcp/: server.ts  server_test.ts
(+61 files in other folders)
