[workspace]
members = [
    "crates/mecojoni-core",
    "crates/mecojoni-wasm",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
