[package]
name = "mecojoni-benchmarks"
description = "Committed native workload and allocation measurements for Mecojoni v2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
mecojoni-core = { path = "../mecojoni-core" }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unsafe_code = "allow"
