[package]
name = "mecojoni-wasm"
description = "Handwritten WebAssembly ABI for Mecojoni v2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mecojoni-core = { path = "../mecojoni-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dlmalloc = { version = "0.2.14", default-features = false, features = ["global"] }

[lints]
workspace = true
